# PartitionAndConquer

./: CMakeLists.txt  LICENSE  README.md
scripts/: partition.sh  run.py  run_galois.py  run_ligra.py
src/: Graph.cpp  Graph.hpp  PartitionedGraph.cpp  PartitionedGraph.hpp  convert2edgelist.cpp  convert2ligra.cpp  preprocess.cpp  test.cpp
